# EMolAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  agent_app.py  anions.db  app.py  cluster_factory.py  database.py  docker-compose.yml  gemini_agent.py  knowledge_base.py  local_agent_ui.py  logger_config.py  mol_viewer.py  pyproject.toml  run.py  test_paths.txt  tools_lib.py  tools_lib_infer.py  uma_entry.py
config/: settings.yaml
resources/db/: cut_10_common.db
scripts/: docker-entrypoint.sh
src/emolagent/: __init__.py  app.py
src/emolagent/core/: __init__.py  cluster_factory.py  tools.py  uma_optimizer.py
src/emolagent/database/: __init__.py  db.py
src/emolagent/knowledge/: __init__.py  knowledge_base.py
src/emolagent/utils/: __init__.py  config.py  i18n.py  logger.py  paths.py
src/emolagent/visualization/: __init__.py  mol_viewer.py
